@@ -1,3 +1,7 @@
+2000-07-24  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Several risky Usecode changes.
+
 2000-07-23  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Teleports work now.
